# RedSquare

./: .gitignore  .pyre_configuration  README.md  pyproject.toml
res/: strings.json
src/: main.py
src/cogs/: core.py  verification.py
src/utilities/: __init__.py  configuration.py
